force-app/main/default/objects/Transaction__c/fields/Donating_Company__c.field-meta.xml
<CustomField>
    <fullName>Donating_Company__c</fullName>
    <label>Donating Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>