force-app/main/default/objects/Transaction__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <defaultValue>&quot;Please, cancel.  This is an invalid type for a transaction&quot;</defaultValue>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>