force-app/main/default/objects/Transaction__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>