force-app/main/default/objects/Transaction__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Worn - Out</fullName>
            </value>
            <value>
                <fullName>No Longer Carry</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Restricted Funds</fullName>
            </value>
            <value>
                <fullName>General Funds</fullName>
            </value>
            <value>
                <fullName>Corporate Donation</fullName>
            </value>
            <value>
                <fullName>Individual Donation</fullName>
            </value>
            <value>
                <fullName>Member Agency Donation</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Rebranding</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Destroyed</fullName>
            </value>
            <value>
                <fullName>Increase</fullName>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
            <value>
                <fullName>Lost - Return</fullName>
            </value>
            <value>
                <fullName>Lost from Inventory</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
                <isActive>false</isActive>
                <label>Allocated</label>
            </value>
            <value>
                <fullName>Donated</fullName>
                <isActive>false</isActive>
                <label>Donated</label>
            </value>
            <value>
                <fullName>Donation</fullName>
                <isActive>false</isActive>
                <label>Donation</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <isActive>false</isActive>
                <label>Lost</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Purchased</fullName>
                <isActive>false</isActive>
                <label>Purchased</label>
            </value>
            <value>
                <fullName>Return</fullName>
                <isActive>false</isActive>
                <label>Return</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>