force-app/main/default/objects/Transaction__c/fields/Transfer_From__c.field-meta.xml
<CustomField>
    <fullName>Transfer_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer From</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transfered Transactions(Out)</relationshipLabel>
    <relationshipName>TransferedTransactionsOut</relationshipName>
    <type>Lookup</type>
</CustomField>