force-app/main/default/objects/Transaction__c/fields/Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incoming Transactions (In)</relationshipLabel>
    <relationshipName>IncomingTransactionsIn</relationshipName>
    <type>Lookup</type>
</CustomField>