force-app/main/default/objects/Transaction__c/recordTypes/Back_In_Service.recordType-meta.xml
<RecordType>
    <fullName>Back_In_Service</fullName>
    <active>true</active>
    <label>Back In Service</label>
</RecordType>