force-app/main/default/objects/Transaction__c/recordTypes/Damaged.recordType-meta.xml
<RecordType>
    <fullName>Damaged</fullName>
    <active>false</active>
    <label>Damaged</label>
</RecordType>