force-app/main/default/objects/Transaction__c/recordTypes/Destroyed.recordType-meta.xml
<RecordType>
    <fullName>Destroyed</fullName>
    <active>false</active>
    <label>Destroyed</label>
</RecordType>