force-app/main/default/objects/Transaction__c/recordTypes/Fulfilled.recordType-meta.xml
<RecordType>
    <fullName>Fulfilled</fullName>
    <active>true</active>
    <label>Fulfilled</label>
</RecordType>