force-app/main/default/objects/Transaction__c/recordTypes/Inventory_Audit.recordType-meta.xml
<RecordType>
    <fullName>Inventory_Audit</fullName>
    <active>true</active>
    <label>Inventory Audit</label>
</RecordType>