force-app/main/default/objects/Transaction__c/recordTypes/Lost.recordType-meta.xml
<RecordType>
    <fullName>Lost</fullName>
    <active>true</active>
    <label>Lost</label>
</RecordType>