force-app/main/default/objects/Transaction__c/recordTypes/On_Shelf_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>On_Shelf_Adjustment</fullName>
    <active>false</active>
    <label>On Shelf Adjustment</label>
</RecordType>