force-app/main/default/objects/Transaction__c/recordTypes/Out_Of_Service.recordType-meta.xml
<RecordType>
    <fullName>Out_Of_Service</fullName>
    <active>true</active>
    <label>Out Of Service</label>
</RecordType>