force-app/main/default/objects/Transaction__c/recordTypes/Purchased.recordType-meta.xml
<RecordType>
    <fullName>Purchased</fullName>
    <active>true</active>
    <label>Purchased</label>
</RecordType>