force-app/main/default/objects/Transaction__c/recordTypes/Rebranding_Needed.recordType-meta.xml
<RecordType>
    <fullName>Rebranding_Needed</fullName>
    <active>false</active>
    <label>Rebranding Needed</label>
</RecordType>