force-app/main/default/objects/Transaction__c/recordTypes/Retired.recordType-meta.xml
<RecordType>
    <fullName>Retired</fullName>
    <active>true</active>
    <label>Retired</label>
</RecordType>