force-app/main/default/objects/Transaction__c/recordTypes/Return_Maintenance_Complete.recordType-meta.xml
<RecordType>
    <fullName>Return_Maintenance_Complete</fullName>
    <active>false</active>
    <label>Return Maintenance Complete</label>
</RecordType>