force-app/main/default/objects/Transaction__c/recordTypes/Returned.recordType-meta.xml
<RecordType>
    <fullName>Returned</fullName>
    <active>true</active>
    <label>Returned</label>
</RecordType>