force-app/main/default/objects/Transaction__c/recordTypes/Routine_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Routine_Maintenance</fullName>
    <active>false</active>
    <label>Routine Maintenance</label>
</RecordType>