force-app/main/default/objects/Transaction__c/validationRules/Back_in_service_cannot_more_than_damaged.validationRule-meta.xml
<ValidationRule>
    <fullName>Back_in_service_cannot_more_than_damaged</fullName>
    <active>true</active>
    <errorConditionFormula>( RecordType.DeveloperName =  &quot;Back_In_Service&quot;) &amp;&amp; 
((ISPICKVAL( Sub_Type__c , &quot;Damaged&quot;) &amp;&amp; ABS(Quantity__c )&gt;   Inventory__r.Damaged_F__c) || 
(ISPICKVAL( Sub_Type__c , &quot;Maintenance&quot;) &amp;&amp; ABS(Quantity__c )&gt;    Inventory__r.Maintenance_F__c) || 
(ISPICKVAL( Sub_Type__c , &quot;Rebranding&quot;) &amp;&amp; ABS(Quantity__c )&gt;    Inventory__r.Rebranding_F__c))</errorConditionFormula>
    <errorMessage>You are attempting to more than is available in this Sub-Type.  Please review the amount.</errorMessage>
</ValidationRule>