force-app/main/default/objects/Transaction__c/validationRules/Decimal_are_not_allowed_in_quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Decimal_are_not_allowed_in_quantity</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(TEXT(Quantity__c), &quot;.&quot;)</errorConditionFormula>
    <errorMessage>Decimals are not allowed in quantity</errorMessage>
</ValidationRule>