force-app/main/default/objects/Transaction__c/validationRules/Nothing_is_allocated.validationRule-meta.xml
<ValidationRule>
    <fullName>Nothing_is_allocated</fullName>
    <active>false</active>
    <description>All items are at store, none is allocated</description>
    <errorConditionFormula>Inventory__r.Out_R__c  =0 &amp;&amp;  TEXT(Sub_Type__c) = &apos;Return&apos;</errorConditionFormula>
    <errorMessage>None Tool is allocated, can not create return record</errorMessage>
</ValidationRule>