force-app/main/default/objects/Transaction__c/validationRules/Sub_Type_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Type_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(TEXT(Sub_Type__c ))</errorConditionFormula>
    <errorMessage>Sub-Type is required to complete this transaction.</errorMessage>
</ValidationRule>